--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
 }
 
 h1 {
-    font-family: star, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: star, Verdana, Geneva, Tahoma, sans-serif; /* Nice! */
     text-align: center;
 }
 
@@ -49,5 +49,5 @@ main {
     
     }
     
-
+/* Delete the empty lines here */
 }
